Fixed CSS to hide vertical scrollbar on menu appearing on Win10.

--- a/app/css/custom.css
+++ b/app/css/custom.css
@@ -20,6 +20,8 @@
 }
 #menu {
   height: 6em;
+  overflow-y: hidden;
+  border-right: none;
 }
 #nav-bar span {
   color: white;
